syntax = "proto3";

package connect6;

option java_multiple_files = true;
option java_package = "com.connect6.grpc";
option java_outer_classname = "Connect6Proto";

service Connect6Game {
  rpc ConnectPlayer(stream ConnectRequest) returns (stream ConnectResponse);

  rpc MakeMove(MoveRequest) returns (MoveResponse);

  rpc GetGameUpdates(UpdateRequest) returns (stream GameUpdate);
}

message ConnectRequest {
  string player_name = 1;
}

message ConnectResponse {
  int32 player_id = 1;
  StoneColor color = 2;
  string message = 3;
}

message MoveRequest {
  int32 player_id = 1;
  Position position1 = 2;
  Position position2 = 3;
}

message MoveResponse {
  bool success = 1;
  string message = 2;
}

message UpdateRequest {
  int32 player_id = 1;
}

message GameUpdate {
  enum UpdateType {
    PLAYER_MOVED = 0;
    GAME_STARTED = 1;
    GAME_OVER = 2;
    ERROR = 3;
  }

  UpdateType type = 1;
  int32 player_id = 2;
  Position position1 = 3;
  Position position2 = 4;
  StoneColor color = 5;
  string message = 6;
}

message Position {
  int32 x = 1;
  int32 y = 2;
}

enum StoneColor {
  EMPTY = 0;
  BLACK = 1;
  WHITE = 2;
}