package com.connect6.client;

import com.connect6.grpc.*;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.stub.StreamObserver;

import javax.swing.*;
import java.awt.*;
import java.awt.event.MouseAdapter;
import java.awt.event.MouseEvent;
import java.util.concurrent.TimeUnit;

public class WorkingClient extends JFrame {
    private ManagedChannel channel;
    private Connect6GameGrpc.Connect6GameStub asyncStub;
    private Connect6GameGrpc.Connect6GameBlockingStub blockingStub;

    private JTextArea logArea;
    private JButton connectBtn;
    private GamePanel gamePanel;
    private String playerName;

    private int playerId;
    private StoneColor myColor = StoneColor.EMPTY;
    private boolean myTurn = false;
    private boolean gameStarted = false;

    // –î–ª—è –≤—ã–±–æ—Ä–∞ —Ö–æ–¥–∞
    private int selectedX1 = -1, selectedY1 = -1;
    private boolean selectingFirst = true;
    private boolean isFirstMoveOfGame = true;

    // –ò–≥—Ä–æ–≤–∞—è –¥–æ—Å–∫–∞
    private StoneColor[][] board = new StoneColor[19][19];

    public WorkingClient(String name) {
        this.playerName = name;
        initializeBoard();
        initializeUI();
    }

    private void initializeBoard() {
        for (int i = 0; i < 19; i++) {
            for (int j = 0; j < 19; j++) {
                board[i][j] = StoneColor.EMPTY;
            }
        }
    }

    private void initializeUI() {
        setTitle("Connect6 - " + playerName);
        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
        setLayout(new BorderLayout());

        // –ü–∞–Ω–µ–ª—å –ª–æ–≥–æ–≤
        logArea = new JTextArea(10, 50);
        logArea.setEditable(false);
        add(new JScrollPane(logArea), BorderLayout.SOUTH);

        // –ò–≥—Ä–æ–≤–∞—è –ø–∞–Ω–µ–ª—å
        gamePanel = new GamePanel();
        add(gamePanel, BorderLayout.CENTER);

        // –ü–∞–Ω–µ–ª—å –∫–Ω–æ–ø–æ–∫
        JPanel buttonPanel = new JPanel();
        connectBtn = new JButton("–ü–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ –∏–≥—Ä–µ");
        connectBtn.addActionListener(e -> connectToGame());

        buttonPanel.add(connectBtn);
        add(buttonPanel, BorderLayout.NORTH);

        setSize(700, 800);
        setLocationRelativeTo(null);
        setVisible(true);

        log("–ö–ª–∏–µ–Ω—Ç –≥–æ—Ç–æ–≤: " + playerName);
    }

    // –í–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π –∫–ª–∞—Å—Å –¥–ª—è –∏–≥—Ä–æ–≤–æ–π –ø–∞–Ω–µ–ª–∏
    class GamePanel extends JPanel {
        private static final int CELL_SIZE = 35;
        private static final int BOARD_SIZE = 19;

        public GamePanel() {
            setPreferredSize(new Dimension(BOARD_SIZE * CELL_SIZE, BOARD_SIZE * CELL_SIZE));
            setBackground(new Color(220, 179, 92)); // –¶–≤–µ—Ç –¥–æ—Å–∫–∏

            addMouseListener(new MouseAdapter() {
                @Override
                public void mouseClicked(MouseEvent e) {
                    if (!gameStarted || !myTurn) {
                        log("–°–µ–π—á–∞—Å –Ω–µ –≤–∞—à —Ö–æ–¥!");
                        return;
                    }

                    int x = e.getX() / CELL_SIZE;
                    int y = e.getY() / CELL_SIZE;

                    if (x < 0 || x >= BOARD_SIZE || y < 0 || y >= BOARD_SIZE) {
                        return;
                    }

                    handleCellClick(x, y);
                }
            });
        }

        @Override
        protected void paintComponent(Graphics g) {
            super.paintComponent(g);
            drawBoard(g);
            drawStones(g);

            // –†–∏—Å—É–µ–º –≤—ã–¥–µ–ª–µ–Ω–∏–µ –≤—ã–±—Ä–∞–Ω–Ω–æ–π –∫–ª–µ—Ç–∫–∏
            if (selectedX1 != -1 && selectedY1 != -1) {
                g.setColor(Color.RED);
                g.drawRect(selectedX1 * CELL_SIZE, selectedY1 * CELL_SIZE,
                        CELL_SIZE, CELL_SIZE);
            }
        }

        private void drawBoard(Graphics g) {
            g.setColor(Color.BLACK);

            // –í–µ—Ä—Ç–∏–∫–∞–ª—å–Ω—ã–µ –ª–∏–Ω–∏–∏
            for (int i = 0; i < BOARD_SIZE; i++) {
                g.drawLine(i * CELL_SIZE + CELL_SIZE / 2, CELL_SIZE / 2,
                        i * CELL_SIZE + CELL_SIZE / 2,
                        (BOARD_SIZE - 1) * CELL_SIZE + CELL_SIZE / 2);
            }

            // –ì–æ—Ä–∏–∑–æ–Ω—Ç–∞–ª—å–Ω—ã–µ –ª–∏–Ω–∏–∏
            for (int i = 0; i < BOARD_SIZE; i++) {
                g.drawLine(CELL_SIZE / 2, i * CELL_SIZE + CELL_SIZE / 2,
                        (BOARD_SIZE - 1) * CELL_SIZE + CELL_SIZE / 2,
                        i * CELL_SIZE + CELL_SIZE / 2);
            }

            // –¶–µ–Ω—Ç—Ä–∞–ª—å–Ω–∞—è —Ç–æ—á–∫–∞
            g.fillOval(9 * CELL_SIZE + CELL_SIZE / 2 - 3,
                    9 * CELL_SIZE + CELL_SIZE / 2 - 3, 6, 6);
        }

        private void drawStones(Graphics g) {
            for (int i = 0; i < BOARD_SIZE; i++) {
                for (int j = 0; j < BOARD_SIZE; j++) {
                    if (board[i][j] != StoneColor.EMPTY) {
                        g.setColor(board[i][j] == StoneColor.BLACK ?
                                Color.BLACK : Color.WHITE);
                        g.fillOval(i * CELL_SIZE + 3, j * CELL_SIZE + 3,
                                CELL_SIZE - 6, CELL_SIZE - 6);
                        g.setColor(Color.GRAY);
                        g.drawOval(i * CELL_SIZE + 3, j * CELL_SIZE + 3,
                                CELL_SIZE - 6, CELL_SIZE - 6);
                    }
                }
            }
        }
    }

    private void handleCellClick(int x, int y) {
        // –ü—Ä–æ–≤–µ—Ä–∫–∞, —á—Ç–æ –∫–ª–µ—Ç–∫–∞ —Å–≤–æ–±–æ–¥–Ω–∞
        if (board[x][y] != StoneColor.EMPTY) {
            log("–ö–ª–µ—Ç–∫–∞ —É–∂–µ –∑–∞–Ω—è—Ç–∞!");
            return;
        }

        // –ü–µ—Ä–≤—ã–π —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö - –æ–¥–∏–Ω –∫–∞–º–µ–Ω—å –≤ —Ü–µ–Ω—Ç—Ä
        if (isFirstMoveOfGame && myColor == StoneColor.BLACK) {
            if (x == 9 && y == 9) {
                sendMove(x, y, -1, -1);
                board[x][y] = myColor;
                isFirstMoveOfGame = false;
                myTurn = false;
                gamePanel.repaint();
                log("–ü–µ—Ä–≤—ã–π —Ö–æ–¥ —Å–¥–µ–ª–∞–Ω! –û–∂–∏–¥–∞–π—Ç–µ –±–µ–ª—ã—Ö...");
            } else {
                log("–ü–µ—Ä–≤—ã–π —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –≤ —Ü–µ–Ω—Ç—Ä (9,9)!");
            }
            return;
        }

        // –û–±—ã—á–Ω—ã–π —Ö–æ–¥ (–≤—ã–±–æ—Ä –¥–≤—É—Ö –∫–∞–º–Ω–µ–π)
        if (selectingFirst) {
            selectedX1 = x;
            selectedY1 = y;
            selectingFirst = false;
            log("–í—ã–±—Ä–∞–Ω–∞ –ø–µ—Ä–≤–∞—è –ø–æ–∑–∏—Ü–∏—è (" + x + "," + y + "). –í—ã–±–µ—Ä–∏—Ç–µ –≤—Ç–æ—Ä—É—é.");
            gamePanel.repaint();
        } else {
            if (x == selectedX1 && y == selectedY1) {
                log("–ù–µ–ª—å–∑—è –≤—ã–±—Ä–∞—Ç—å —Ç—É –∂–µ –∫–ª–µ—Ç–∫—É!");
                return;
            }

            sendMove(selectedX1, selectedY1, x, y);

            // –û–±–Ω–æ–≤–ª—è–µ–º –¥–æ—Å–∫—É
            board[selectedX1][selectedY1] = myColor;
            board[x][y] = myColor;

            // –°–±—Ä–∞—Å—ã–≤–∞–µ–º —Å–æ—Å—Ç–æ—è–Ω–∏–µ
            selectedX1 = selectedY1 = -1;
            selectingFirst = true;
            isFirstMoveOfGame = false;
            myTurn = false;

            gamePanel.repaint();
            log("–•–æ–¥ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω! –û–∂–∏–¥–∞–π—Ç–µ –æ—Ç–≤–µ—Ç–∞ –ø—Ä–æ—Ç–∏–≤–Ω–∏–∫–∞...");
        }
    }

    private void sendMove(int x1, int y1, int x2, int y2) {
        Position pos1 = Position.newBuilder().setX(x1).setY(y1).build();
        Position pos2 = Position.newBuilder().setX(x2).setY(y2).build();

        MoveRequest request = MoveRequest.newBuilder()
                .setPlayerId(playerId)
                .setPosition1(pos1)
                .setPosition2(pos2)
                .build();

        // –ò—Å–ø–æ–ª—å–∑—É–µ–º –±–ª–æ–∫–∏—Ä—É—é—â–∏–π –≤—ã–∑–æ–≤ –¥–ª—è –ø—Ä–æ—Å—Ç–æ—Ç—ã
        new Thread(() -> {
            try {
                MoveResponse response = blockingStub.makeMove(request);

                SwingUtilities.invokeLater(() -> {
                    if (response.getSuccess()) {
                        log("‚úì –•–æ–¥ –ø—Ä–∏–Ω—è—Ç —Å–µ—Ä–≤–µ—Ä–æ–º: " + response.getMessage());
                    } else {
                        log("‚ùå –û—à–∏–±–∫–∞ —Ö–æ–¥–∞: " + response.getMessage());
                        myTurn = true; // –í–æ–∑–≤—Ä–∞—â–∞–µ–º —Ö–æ–¥
                    }
                });

            } catch (Exception e) {
                SwingUtilities.invokeLater(() -> {
                    log("‚ùå –û—à–∏–±–∫–∞ –æ—Ç–ø—Ä–∞–≤–∫–∏ —Ö–æ–¥–∞: " + e.getMessage());
                    myTurn = true;
                });
            }
        }).start();
    }

    private void connectToGame() {
        connectBtn.setEnabled(false);

        new Thread(() -> {
            try {
                log("–°–æ–∑–¥–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å —Å–µ—Ä–≤–µ—Ä–æ–º...");

                channel = ManagedChannelBuilder.forAddress("localhost", 8080)
                        .usePlaintext()
                        .keepAliveTime(30, TimeUnit.SECONDS)
                        .keepAliveTimeout(5, TimeUnit.SECONDS)
                        .keepAliveWithoutCalls(true)
                        .build();

                asyncStub = Connect6GameGrpc.newStub(channel);
                blockingStub = Connect6GameGrpc.newBlockingStub(channel);

                log("–°–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ. –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å...");

                // –î–í–£–°–¢–û–†–û–ù–ù–ò–ô –ü–û–¢–û–ö–û–í–´–ô –≤—ã–∑–æ–≤
                StreamObserver<ConnectRequest> requestObserver =
                        asyncStub.connectPlayer(new StreamObserver<ConnectResponse>() {

                            @Override
                            public void onNext(ConnectResponse response) {
                                SwingUtilities.invokeLater(() -> {
                                    log("=== –û—Ç–≤–µ—Ç —Å–µ—Ä–≤–µ—Ä–∞ ===");
                                    log("ID –∏–≥—Ä–æ–∫–∞: " + response.getPlayerId());
                                    log("–¶–≤–µ—Ç: " + response.getColor());
                                    log("–°–æ–æ–±—â–µ–Ω–∏–µ: " + response.getMessage());
                                    log("===================");

                                    playerId = response.getPlayerId();
                                    myColor = response.getColor();

                                    if (myColor != StoneColor.EMPTY) {
                                        gameStarted = true;

                                        log("‚ú®‚ú®‚ú® –ò–ì–†–ê –ù–ê–ß–ê–õ–ê–°–¨! ‚ú®‚ú®‚ú®");
                                        log("–í—ã –∏–≥—Ä–∞–µ—Ç–µ –∑–∞ " +
                                                (myColor == StoneColor.BLACK ? "–ß–Å–†–ù–´–•" : "–ë–ï–õ–´–•"));

                                        if (myColor == StoneColor.BLACK) {
                                            myTurn = true;
                                            log("‚ö† –í–ê–ñ–ù–û: –ü–µ—Ä–≤—ã–π —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö - –û–î–ò–ù –∫–∞–º–µ–Ω—å –≤ —Ü–µ–Ω—Ç—Ä –¥–æ—Å–∫–∏ (9,9)");
                                        } else {
                                            log("‚è≥ –û–∂–∏–¥–∞–π—Ç–µ —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö...");
                                        }

                                        // –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è
                                        subscribeToUpdates(playerId);
                                    } else {
                                        log("‚è≥ –û–∂–∏–¥–∞–µ–º –≤—Ç–æ—Ä–æ–≥–æ –∏–≥—Ä–æ–∫–∞... " + response.getMessage());
                                    }
                                });
                            }

                            @Override
                            public void onError(Throwable t) {
                                SwingUtilities.invokeLater(() -> {
                                    log("‚ùå –û—à–∏–±–∫–∞ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è: " + t.getMessage());
                                    connectBtn.setEnabled(true);
                                });
                            }

                            @Override
                            public void onCompleted() {
                                SwingUtilities.invokeLater(() -> {
                                    log("‚úì –°–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å —Å–µ—Ä–≤–µ—Ä–æ–º –∑–∞–≤–µ—Ä—à–µ–Ω–æ");
                                });
                            }
                        });

                // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å –Ω–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ
                ConnectRequest request = ConnectRequest.newBuilder()
                        .setPlayerName(playerName)
                        .build();

                requestObserver.onNext(request);
                // –ù–ï –∑–∞–∫—Ä—ã–≤–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ!

                // –î–µ—Ä–∂–∏–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ –∂–∏–≤—ã–º
                while (true) {
                    Thread.sleep(1000);
                }

            } catch (Exception e) {
                SwingUtilities.invokeLater(() -> {
                    log("‚ùå –û—à–∏–±–∫–∞: " + e.getMessage());
                    connectBtn.setEnabled(true);
                });
            }
        }).start();
    }

    private void subscribeToUpdates(int playerId) {
        log("–ü–æ–¥–ø–∏—Å—ã–≤–∞—é—Å—å –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –∏–≥—Ä—ã...");

        UpdateRequest request = UpdateRequest.newBuilder()
                .setPlayerId(playerId)
                .build();

        asyncStub.getGameUpdates(request, new StreamObserver<GameUpdate>() {
            @Override
            public void onNext(GameUpdate update) {
                SwingUtilities.invokeLater(() -> {
                    log("üì¢ –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ: " + update.getType() + " - " + update.getMessage());

                    // –û–±—Ä–∞–±–æ—Ç–∫–∞ —Ö–æ–¥–æ–≤ –ø—Ä–æ—Ç–∏–≤–Ω–∏–∫–∞
                    if (update.getType() == GameUpdate.UpdateType.PLAYER_MOVED &&
                            update.getPlayerId() != playerId) {

                        // –û–±–Ω–æ–≤–ª—è–µ–º –¥–æ—Å–∫—É
                        if (update.hasPosition1()) {
                            Position pos1 = update.getPosition1();
                            board[pos1.getX()][pos1.getY()] = update.getColor();
                        }
                        if (update.hasPosition2() &&
                                update.getPosition2().getX() != -1 &&
                                update.getPosition2().getY() != -1) {
                            Position pos2 = update.getPosition2();
                            board[pos2.getX()][pos2.getY()] = update.getColor();
                        }

                        gamePanel.repaint();
                        myTurn = true;
                        log("‚úì –•–æ–¥ –ø—Ä–æ—Ç–∏–≤–Ω–∏–∫–∞ –ø—Ä–∏–Ω—è—Ç. –¢–µ–ø–µ—Ä—å –≤–∞—à —Ö–æ–¥!");
                    }
                });
            }

            @Override
            public void onError(Throwable t) {
                SwingUtilities.invokeLater(() -> {
                    log("‚ùå –û—à–∏–±–∫–∞ –≤ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è—Ö: " + t.getMessage());
                });
            }

            @Override
            public void onCompleted() {
                SwingUtilities.invokeLater(() -> {
                    log("–ü–æ—Ç–æ–∫ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–π –∑–∞–≤–µ—Ä—à–µ–Ω");
                });
            }
        });
    }

    private void log(String message) {
        logArea.append(message + "\n");
        logArea.setCaretPosition(logArea.getDocument().getLength());
    }

    public static void main(String[] args) {
        String name = args.length > 0 ? args[0] : "–ò–≥—Ä–æ–∫";
        SwingUtilities.invokeLater(() -> new WorkingClient(name));
    }
}