package com.connect6.server;

import com.connect6.grpc.*;
import io.grpc.stub.StreamObserver;

import java.util.Map;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicInteger;

public class Connect6GameService extends Connect6GameGrpc.Connect6GameImplBase {
    private final AtomicInteger playerCounter = new AtomicInteger(1);
    private final Map<Integer, PlayerSession> playerSessions = new ConcurrentHashMap<>();
    private final BlockingQueue<PlayerSession> waitingQueue = new LinkedBlockingQueue<>();
    private final Map<Integer, GameSession> activeGames = new ConcurrentHashMap<>();

    static class PlayerSession {
        final int id;
        final String name;
        StoneColor color;
        StreamObserver<ConnectResponse> connectObserver;
        StreamObserver<GameUpdate> updateObserver;
        int gameId = -1;

        PlayerSession(int id, String name, StreamObserver<ConnectResponse> connectObserver) {
            this.id = id;
            this.name = name;
            this.connectObserver = connectObserver;
        }
    }

    static class GameSession {
        final int gameId;
        final PlayerSession blackPlayer;
        final PlayerSession whitePlayer;
        GameBoard gameBoard;
        int currentPlayerId;

        GameSession(int gameId, PlayerSession blackPlayer, PlayerSession whitePlayer) {
            this.gameId = gameId;
            this.blackPlayer = blackPlayer;
            this.whitePlayer = whitePlayer;
            this.gameBoard = new GameBoard();
            this.currentPlayerId = blackPlayer.id;

            blackPlayer.gameId = gameId;
            whitePlayer.gameId = gameId;
        }

        PlayerSession getOpponent(int playerId) {
            if (playerId == blackPlayer.id) return whitePlayer;
            if (playerId == whitePlayer.id) return blackPlayer;
            return null;
        }

        boolean isPlayerTurn(int playerId) {
            return currentPlayerId == playerId;
        }

        void switchTurn() {
            currentPlayerId = (currentPlayerId == blackPlayer.id) ?
                    whitePlayer.id : blackPlayer.id;
        }

    }

    public Connect6GameService() {
        Executors.newSingleThreadExecutor().submit(() -> {
            while (true) {
                try {
                    createGameIfPossible();
                    Thread.sleep(100);
                } catch (InterruptedException e) {
                    break;
                }
            }
        });
    }

    private void createGameIfPossible() throws InterruptedException {
        if (waitingQueue.size() >= 2) {
            PlayerSession player1 = waitingQueue.take();
            PlayerSession player2 = waitingQueue.take();

            int gameId = activeGames.size() + 1;
            GameSession game = new GameSession(gameId, player1, player2);
            activeGames.put(gameId, game);

            player1.color = StoneColor.BLACK;
            player2.color = StoneColor.WHITE;

            System.out.println("‚ú® –°–æ–∑–¥–∞–µ–º –∏–≥—Ä—É #" + gameId + ": " +
                    player1.name + " (—á–µ—Ä–Ω—ã–µ, ID:" + player1.id + ") vs " +
                    player2.name + " (–±–µ–ª—ã–µ, ID:" + player2.id + ")");

            ConnectResponse blackResponse = ConnectResponse.newBuilder()
                    .setPlayerId(player1.id)
                    .setColor(StoneColor.BLACK)
                    .setMessage("–ò–≥—Ä–∞ –Ω–∞—á–∞–ª–∞—Å—å! –í—ã –∏–≥—Ä–∞–µ—Ç–µ —á–µ—Ä–Ω—ã–º–∏. –ü–µ—Ä–≤—ã–π —Ö–æ–¥: –æ–¥–∏–Ω –∫–∞–º–µ–Ω—å –≤ —Ü–µ–Ω—Ç—Ä (9,9)")
                    .build();

            ConnectResponse whiteResponse = ConnectResponse.newBuilder()
                    .setPlayerId(player2.id)
                    .setColor(StoneColor.WHITE)
                    .setMessage("–ò–≥—Ä–∞ –Ω–∞—á–∞–ª–∞—Å—å! –í—ã –∏–≥—Ä–∞–µ—Ç–µ –±–µ–ª—ã–º–∏. –û–∂–∏–¥–∞–π—Ç–µ —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö")
                    .build();

            player1.connectObserver.onNext(blackResponse);
            player2.connectObserver.onNext(whiteResponse);

            player1.connectObserver.onCompleted();
            player2.connectObserver.onCompleted();
        }
    }

    @Override
    public StreamObserver<ConnectRequest> connectPlayer(
            StreamObserver<ConnectResponse> responseObserver) {

        return new StreamObserver<ConnectRequest>() {
            private PlayerSession session;
            private boolean connected = false;

            @Override
            public void onNext(ConnectRequest request) {
                if (!connected) {
                    int playerId = playerCounter.getAndIncrement();
                    session = new PlayerSession(playerId, request.getPlayerName(), responseObserver);

                    System.out.println("üéÆ –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: " + request.getPlayerName() + " (ID: " + playerId + ")");

                    playerSessions.put(playerId, session);

                    try {
                        waitingQueue.put(session);

                        System.out.println("‚è≥ –ò–≥—Ä–æ–∫ " + playerId + " –¥–æ–±–∞–≤–ª–µ–Ω –≤ –æ—á–µ—Ä–µ–¥—å –æ–∂–∏–¥–∞–Ω–∏—è. –í –æ—á–µ—Ä–µ–¥–∏: " + waitingQueue.size());

                        ConnectResponse waitResponse = ConnectResponse.newBuilder()
                                .setPlayerId(playerId)
                                .setColor(StoneColor.EMPTY)
                                .setMessage("–û–∂–∏–¥–∞–Ω–∏–µ –≤—Ç–æ—Ä–æ–≥–æ –∏–≥—Ä–æ–∫–∞... –í –æ—á–µ—Ä–µ–¥–∏: " + waitingQueue.size())
                                .build();
                        responseObserver.onNext(waitResponse);

                    } catch (InterruptedException e) {
                        e.printStackTrace();
                    }

                    connected = true;
                }
            }

            @Override
            public void onError(Throwable t) {
                System.err.println("‚ùå –û—à–∏–±–∫–∞ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è —Å –∏–≥—Ä–æ–∫–æ–º: " +
                        (session != null ? session.name : "unknown") + ": " + t.getMessage());

                if (session != null) {
                    cleanupPlayer(session.id);
                }
            }

            @Override
            public void onCompleted() {
                System.out.println("üîå –ò–≥—Ä–æ–∫ –æ—Ç–∫–ª—é—á–∏–ª—Å—è: " +
                        (session != null ? session.name : "unknown"));

                if (session != null) {
                    cleanupPlayer(session.id);
                }
                responseObserver.onCompleted();
            }
        };
    }

    private void cleanupPlayer(int playerId) {
        PlayerSession session = playerSessions.remove(playerId);
        if (session != null) {
            waitingQueue.remove(session);

            if (session.gameId != -1) {
                GameSession game = activeGames.get(session.gameId);
                if (game != null) {
                    PlayerSession opponent = game.getOpponent(playerId);
                    if (opponent != null) {
                        GameUpdate gameOver = GameUpdate.newBuilder()
                                .setType(GameUpdate.UpdateType.GAME_OVER)
                                .setMessage("–ü—Ä–æ—Ç–∏–≤–Ω–∏–∫ –æ—Ç–∫–ª—é—á–∏–ª—Å—è. –ò–≥—Ä–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞.")
                                .build();
                        opponent.updateObserver.onNext(gameOver);
                        opponent.updateObserver.onCompleted();
                    }
                }
            }
        }
    }

    @Override
    public void makeMove(MoveRequest request,
                         StreamObserver<MoveResponse> responseObserver) {
        System.out.println("–•–æ–¥ –æ—Ç –∏–≥—Ä–æ–∫–∞ " + request.getPlayerId() +
                ": (" + request.getPosition1().getX() + "," +
                request.getPosition1().getY() + ") –∏ (" +
                request.getPosition2().getX() + "," +
                request.getPosition2().getY() + ")");

        int playerId = request.getPlayerId();
        PlayerSession player = playerSessions.get(playerId);

        if (player == null || player.gameId == -1) {
            sendError(responseObserver, "–ò–≥—Ä–æ–∫ –Ω–µ –≤ –∏–≥—Ä–µ");
            return;
        }

        GameSession game = activeGames.get(player.gameId);
        if (game == null) {
            sendError(responseObserver, "–ò–≥—Ä–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω–∞");
            return;
        }

        if (!game.isPlayerTurn(playerId)) {
            sendError(responseObserver, "–°–µ–π—á–∞—Å –Ω–µ –≤–∞—à —Ö–æ–¥");
            return;
        }

        int x1 = request.getPosition1().getX();
        int y1 = request.getPosition1().getY();
        int x2 = request.getPosition2().getX();
        int y2 = request.getPosition2().getY();

        if (player.color == StoneColor.BLACK && game.gameBoard.isFirstMove()) {
            if (x2 != -1 || y2 != -1) {
                sendError(responseObserver, "–ü–µ—Ä–≤—ã–π —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö - —Ç–æ–ª—å–∫–æ –æ–¥–∏–Ω –∫–∞–º–µ–Ω—å");
                return;
            }
            if (x1 != 9 || y1 != 9) {
                sendError(responseObserver, "–ü–µ—Ä–≤—ã–π —Ö–æ–¥ —á–µ—Ä–Ω—ã—Ö –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –≤ —Ü–µ–Ω—Ç—Ä (9,9)");
                return;
            }
        }

        boolean success = game.gameBoard.placeStones(x1, y1, x2, y2, player.color);

        if (!success) {
            sendError(responseObserver, "–ù–µ–≤–æ–∑–º–æ–∂–Ω–æ —Å–¥–µ–ª–∞—Ç—å —Ö–æ–¥");
            return;
        }

        StoneColor winner = game.gameBoard.checkWinner();

        PlayerSession opponent = game.getOpponent(playerId);
        if (opponent != null && opponent.updateObserver != null) {
            GameUpdate opponentUpdate = GameUpdate.newBuilder()
                    .setType(GameUpdate.UpdateType.PLAYER_MOVED)
                    .setPlayerId(playerId)
                    .setPosition1(request.getPosition1())
                    .setPosition2(request.getPosition2())
                    .setColor(player.color)
                    .build();
            opponent.updateObserver.onNext(opponentUpdate);
        }

        if (winner != StoneColor.EMPTY) {
            GameUpdate gameOver = GameUpdate.newBuilder()
                    .setType(GameUpdate.UpdateType.GAME_OVER)
                    .setColor(winner)
                    .setMessage("–ò–≥—Ä–∞ –æ–∫–æ–Ω—á–µ–Ω–∞! –ü–æ–±–µ–¥–∏—Ç–µ–ª—å: " +
                            (winner == StoneColor.BLACK ? "–ß–µ—Ä–Ω—ã–µ" : "–ë–µ–ª—ã–µ"))
                    .build();

            if (player.updateObserver != null) {
                player.updateObserver.onNext(gameOver);
                player.updateObserver.onCompleted();
            }
            if (opponent != null && opponent.updateObserver != null) {
                opponent.updateObserver.onNext(gameOver);
                opponent.updateObserver.onCompleted();
            }

            MoveResponse response = MoveResponse.newBuilder()
                    .setSuccess(true)
                    .setMessage("–ò–≥—Ä–∞ –æ–∫–æ–Ω—á–µ–Ω–∞! " +
                            (winner == player.color ? "–í—ã –ø–æ–±–µ–¥–∏–ª–∏!" : "–í—ã –ø—Ä–æ–∏–≥—Ä–∞–ª–∏!"))
                    .build();
            responseObserver.onNext(response);

        } else {
            game.switchTurn();

            MoveResponse response = MoveResponse.newBuilder()
                    .setSuccess(true)
                    .setMessage("–•–æ–¥ –ø—Ä–∏–Ω—è—Ç")
                    .build();
            responseObserver.onNext(response);
        }

        responseObserver.onCompleted();
    }

    private void sendError(StreamObserver<MoveResponse> responseObserver, String message) {
        MoveResponse error = MoveResponse.newBuilder()
                .setSuccess(false)
                .setMessage(message)
                .build();
        responseObserver.onNext(error);
        responseObserver.onCompleted();
    }

    @Override
    public void getGameUpdates(UpdateRequest request,
                               StreamObserver<GameUpdate> responseObserver) {
        int playerId = request.getPlayerId();
        System.out.println("–ü–æ–¥–ø–∏—Å–∫–∞ –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –æ—Ç –∏–≥—Ä–æ–∫–∞ " + playerId);

        PlayerSession player = playerSessions.get(playerId);
        if (player != null) {
            player.updateObserver = responseObserver;

            GameUpdate update = GameUpdate.newBuilder()
                    .setType(GameUpdate.UpdateType.GAME_STARTED)
                    .setMessage("–í—ã —É—Å–ø–µ—à–Ω–æ –ø–æ–¥–ø–∏—Å–∞–ª–∏—Å—å –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –∏–≥—Ä—ã")
                    .build();

            responseObserver.onNext(update);
        } else {
            GameUpdate error = GameUpdate.newBuilder()
                    .setType(GameUpdate.UpdateType.ERROR)
                    .setMessage("–ò–≥—Ä–æ–∫ –Ω–µ –Ω–∞–π–¥–µ–Ω")
                    .build();

            responseObserver.onNext(error);
            responseObserver.onCompleted();
        }
    }
}